refactor: replace collect(Collectors.toList()) with toList() for brevity